# gnn

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  graphguard_workflow copy.md  graphguard_workflow.md  phase2.md  pyproject.toml  remove.txt  reseed_db.py  run_simulation.py
api/: __init__.py  dependencies.py  init_db.py  main.py  schemas.py  security.py
api/routers/: __init__.py  dashboard.py  graph.py  ingest.py  query.py  sandbox.py
data/: graphguard.db
db/: neo4j_client.py
gnn/: dataset.py  fraud_gnn_model.pth  inference.py  model.py  train.py
gnn/checkpoints/: fraud_gnn_model_v1.1.pth  fraud_gnn_model_v1.pth  fraud_gnn_model_v2.pth  fraud_gnn_model_v3.pth
simulation/: agents.py  model.py
tests/: __init__.py  conftest.py  test_dashboard.py  test_graph.py  test_health.py  test_ingest.py  test_neo4j_client_unit.py  test_query.py  test_sandbox.py  test_security.py
worker/: __init__.py  consumer.py
